Fixed the top ribbon's formatting to wrap cleanly around the video player.

--- a/screen/src/sass/_minigameInfo.scss
+++ b/screen/src/sass/_minigameInfo.scss
@@ -199,9 +199,9 @@
 	position: relative;
 	background-color: $ui_red;
 	border: solid 2px $ui_cream;
-	width: 85%;
+	width: calc(60% + 80px);
 	height: 60px;
-	left: 7.5%;
+	left: calc(20% - 42px);
 	top: 20px;
 	
 	#minigame-name {
@@ -217,7 +217,7 @@
 	
 	.left-tail, .right-tail {
 		background-color: $ui_red;
-		width: calc(40% - 6px);
+		width: 100%;
 		height: 40px;
 		top: 40px;
 		
@@ -236,7 +236,7 @@
 	}
 	
 	.left-tail {
-		left: -40%;
+		left: calc(-100% - 6px);
 		@include skewX(60deg);
 		
 		&:before {
@@ -246,7 +246,7 @@
 	}
 	
 	.right-tail {
-		right: -40%;
+		right: calc(-100% - 6px);
 		@include skewX(-60deg);
 		
 		&:before {
